--- a/app/scripts/views/biz/act/update.html
+++ b/app/scripts/views/biz/act/update.html
@@ -7,22 +7,23 @@
         </div>
         <div class="panel-body">
             <!--<simditor ng-model="content" config="simditorConfig"></simditor>-->
-            <form class="form-horizontal" name="FormBody" novalidate
+            <form class="form-horizontal" name="FormBody" novalidate ng-init="title_info = [1,1,1,1,1,1]"
                   disabled-role="{{$stateParams.product_id?'admin,op':''}}">
                 <div class="panel panel-primary">
-                    <div class="panel-body">
-                        <h4>活动信息</h4>
+                    <div class="panel-body" ng-click="title_info[0] = title_info[0]+1; ">
+                        <h5>活动信息
+                            <i class="animate-switch fa"
+                               ng-class="{'fa-angle-double-up':title_info[0]%2==1,'fa-angle-double-down':title_info[0]%2==0}"></i>
+                        </h5>
+                    </div>
+                    <div class="panel-body" ng-show="title_info[0]%2==1">
                         <!--<div form-image-content text="图文详情" ng-model="param.contents" ng-show="param.content_type==1"></div>-->
                         <div form-input text="活动ID" ng-model="param.product_id"
                              ng-show="$stateParams.product_id"
                              placeholder="活动ID" ng-disabled="$stateParams.product_id"></div>
                         <div form-input text="活动标题" ng-model="param.title" placeholder="活动标题,不超过30个字" required="true"
                              minlength="1" maxlength="30"></div>
-                        <div form-input text="活动简介" ng-model="param.brief" placeholder="不超过50个字" minlength="1"
-                             maxlength="50"></div>
-                        <div form-input text="分享标题" ng-model="param.share_title" placeholder="不超过40个字" minlength="1"
-                             maxlength="40"></div>
-                        <div form-radio text="活动类别" ng-model="param.act_type" required="true" default="游学"
+                        <div form-radio text="活动类别" ng-model="param.act_type" required="true" default=""
                              source="[{text:'游学',value:'游学'},{text:'DIY',value:'DIY'},{text:'外语',value:'外语'},
                              {text:'才艺',value:'才艺'},{text:'摄影',value:'摄影'},{text:'乐园',value:'乐园'},
                              {text:'微课',value:'微课'},{text:'运动',value:'运动'},{text:'科技创意',value:'科技创意'}
@@ -39,41 +40,18 @@
                         <!--source="[{text:'德',value:'1'},{text:'智',value:'2'},{text:'体',value:'3'},{text:'美',value:'4'},-->
                         <!--{text:'劳',value:'5'}]" source-api=""></div>-->
 
-                        <div form-input text="最小年龄" ng-model="param.act_min_age" type="number" min="0"></div>
-                        <div form-input text="最大年龄" ng-model="param.act_max_age" type="number" min="0"></div>
+                        <div form-checkbox text="覆盖城市" ng-model="param.visible_cities" required="true"
+                             source="[{text:'上海市',value:'上海市'},{text:'南京市',value:'南京市'},
+                             {text:'厦门市',value:'厦门市'},{text:'北京市',value:'北京市'}]" source-api=""></div>
+                        <div form-input text="活动简介" ng-model="param.brief" placeholder="不超过50个字" minlength="1"
+                             maxlength="50"></div>
                         <div form-input text="活动益处" ng-model="param.act_benefit" placeholder="不超过20个字"
                              minlength="1" maxlength="14"></div>
-                        <div form-radio text="会员购买优惠" ng-model="param.vip_promotion_type" default="1"
-                             source="[{text:'打折',value:'1'},{text:'无优惠',value:'3'}]"></div>
-                        <div class="form-group"
-                             ng-show="param.vip_promotion_type == 1 || param.vip_promotion_type == 2">
-                            <div class="form_element">
-                                <label class="col-sm-2 control-label">设置折扣或者减额</label>
-                                <div class="col-sm-2">
-                                    <input class="form-control text-right" ng-model="vip_discount"
-                                           ng-blur="reset_vip_discount()"
-                                           placeholder="请填写数字">
-                                </div>
-                                <span class="col-sm-1 control-label" style="text-align: left;"
-                                      ng-show="param.vip_promotion_type == 1">%</span>
-                            </div>
-                        </div>
-                        <!--<div form-input text="设置减额" ng-model="param.per_buy_count"-->
-                        <!--required="true" ng-show="param.vip_promotion_type == 2"></div>-->
-                        <div form-radio text="是否在日历中显示" ng-model="param.show_in_calendar" default="1"
-                             source="[{text:'显示',value:'1'},{text:'不显示',value:'2'}]" required="true"></div>
-                        <div form-radio text="是否限制仅会员可购买" ng-model="param.vip_buy" default="1"
-                             source="[{text:'仅会员',value:'1'},{text:'会员+体验会员',value:'3'},{text:'不限制',value:'2'}]"
-                             required="true"></div>
+                        <div form-input text="分享标题" ng-model="param.share_title" placeholder="不超过40个字" minlength="1"
+                             maxlength="40"></div>
 
-                        <div form-input text="单次限购份数" ng-model="param.order_count_max" type="number"
-                             min="1" required="true"></div>
-                        <div form-input text="单人限购份数" ng-model="param.per_buy_count" type="number"
-                             min="0"></div>
-                        <div form-input text="初始购买份数" ng-model="param.init_buy_count" type="number"
-                             min="1"></div>
-                        <!--<div form-input text="已售份数基数" ng-model="param.base_sale_count" type="number"-->
-                        <!--min="0"></div>-->
+                        <div form-input text="最小年龄" ng-model="param.act_min_age" type="number" min="0"></div>
+                        <div form-input text="最大年龄" ng-model="param.act_max_age" type="number" min="0"></div>
                         <div form-date-time text="上架时间" ng-model="param.start_time" required="true"></div>
                         <div form-date-time text="下架时间" ng-model="param.end_time" required="true"></div>
                         <hr>
@@ -101,7 +79,12 @@
                 </div>
                 <div class="panel panel-primary">
                     <div class="panel-body">
-                        <h4>活动规则</h4>
+                        <h5 ng-click="title_info[1] = title_info[1]+1; ">活动地址
+                            <i class="animate-switch fa"
+                               ng-class="{'fa-angle-double-up':title_info[1]%2==1,'fa-angle-double-down':title_info[1]%2==0}"></i>
+                        </h5>
+                    </div>
+                    <div class="panel-body" ng-show="title_info[1]%2==1">
                         <div form-input text="活动地点" ng-model="param.act_address" placeholder="例如:永达国际大厦"></div>
                         <div form-radio text="城市" ng-model="city_name" default="上海"
                              source="[{text:'上海',value:'上海'}]" show-env="wwwwwwwww"></div>
@@ -136,7 +119,12 @@
                 </div>
                 <div class="panel panel-primary">
                     <div class="panel-body">
-                        <h4>拼团规则</h4>
+                        <h5 ng-click="title_info[2] = title_info[2]+1; ">活动规则
+                            <i class="animate-switch fa"
+                               ng-class="{'fa-angle-double-up':title_info[2]%2==1,'fa-angle-double-down':title_info[2]%2==0}"></i>
+                        </h5>
+                    </div>
+                    <div class="panel-body" ng-show="title_info[2]%2==1">
                         <!--<div form-radio text="拼团类型" type="radio" ng-model="param.category" required="true" default="2"-->
                         <!--source="[{text:'众筹',value:'3'},{text:'一起玩',value:'4'}]"-->
                         <!--source-api=""></div>-->
@@ -144,7 +132,7 @@
                              source="[{text:'人数团',value:'2'},{text:'直接买',value:'3'},{text:'直接买+人数团',value:'4'}]"
                              source-api="" ng-disabled="$stateParams.product_id"></div>
                         <div form-table text="活动类目" ng-model="param.options" max="1"
-                             ng-show="param.category!=4"
+                             ng-show="param.category!=4" required="true"
                              columns="[{'name': 'ID', 'field': 'option_id',disabled:'true'},
                              {'name': '类目', 'field': 'option_name',required:'true'},
                              {'name': '价格', 'field': 'option_price',type:'number',min:'0',minLength:'2',required:'true'},
@@ -164,26 +152,35 @@
                              {'name': '价格', 'field': 'option_price',type:'number',min:'0',minLength:'2',required:'true'},
                              {'name': '库存', 'field': 'option_inventory',required:'true'},
                              {'name': '排序', 'field': 'order_by',type:'number',min:'0',required:'true'}]"></div>
-                        <div form-radio text="是否支持陌生人拼团" type="radio" ng-model="param.group_strange" required="true"
-                             default="2" source="[{text:'是',value:'2'},{text:'否',value:'1'}]"
-                             ng-show="param.category!=3" source-api=""></div>
 
-                        <!--<div form-input text="目标金额" ng-model="param.act_goal_price" required="true" min="0"-->
-                        <!--max="options_goal_price" type="number"></div>-->
-
-                        <div form-input text="玩法说明标题" ng-model="param.play_subject" placeholder="玩法说明标题"
-                             ng-show="param.category!=3"></div>
-                        <div form-textarea text="玩法说明内容" ng-model="param.play_introduction"
-                             placeholder="玩法说明内容" ng-show="param.category!=3"></div>
-                        <div form-input text="拼团人数" ng-model="param.group_min_num" min="0"
-                             type="number" ng-show="param.category!=3"></div>
-                        <div form-input text="拼团有效时间(小时)" ng-model="hours" min="0" type="number"
-                             placeholder="单位:小时" ng-show="param.category!=3"></div>
-
-                        <div form-checkbox text="覆盖城市" ng-model="param.visible_cities" required="true"
-                             source="[{text:'上海市',value:'上海市'},{text:'南京市',value:'南京市'},
-                             {text:'厦门市',value:'厦门市'},{text:'北京市',value:'北京市'}]" source-api=""></div>
-
+                        <div form-input text="单次限购份数" ng-model="param.order_count_max" type="number"
+                             min="1" required="true"></div>
+                        <div form-input text="单人限购份数" ng-model="param.per_buy_count" type="number"
+                             min="0"></div>
+                        <div form-input text="初始购买份数" ng-model="param.init_buy_count" type="number"
+                             min="1"></div>
+                        <div form-radio text="是否限制仅会员可购买" ng-model="param.vip_buy" default="1"
+                             source="[{text:'仅会员',value:'1'},{text:'不限制',value:'2'}]"
+                             required="true"></div>
+                        <div form-radio text="会员购买优惠" ng-model="param.vip_promotion_type" default="1"
+                             source="[{text:'打折',value:'1'},{text:'无优惠',value:'3'}]"></div>
+                        <div class="form-group"
+                             ng-show="param.vip_promotion_type == 1 || param.vip_promotion_type == 2">
+                            <div class="form_element">
+                                <label class="col-sm-2 control-label">设置折扣</label>
+                                <div class="col-sm-2">
+                                    <input class="form-control text-right" ng-model="vip_discount"
+                                           ng-blur="reset_vip_discount()"
+                                           placeholder="请填写数字">
+                                </div>
+                                <span class="col-sm-1 control-label" style="text-align: left;"
+                                      ng-show="param.vip_promotion_type == 1">%</span>
+                            </div>
+                        </div>
+                        <!--<div form-input text="设置减额" ng-model="param.per_buy_count"-->
+                        <!--required="true" ng-show="param.vip_promotion_type == 2"></div>-->
+                        <!--<div form-input text="已售份数基数" ng-model="param.base_sale_count" type="number"-->
+                        <!--min="0"></div>-->
                         <div form-radio text="是否需要配送" ng-model="param.delivery_type" required="true"
                              ng-change="delivery_type()" ng-disabled="$stateParams.product_id"
                              source="[{text:'物流配送',value:'1'},{text:'无需配送',value:'3'}]"
@@ -194,14 +191,33 @@
                         <div form-radio text="送达时间类型" ng-model="param.arrive_type" default="2"
                              ng-show="param.delivery_type!=3" ng-disabled="$stateParams.product_id"
                              source="[{text:'无需指定',value:'2'},{text:'周六／周一',value:'1'}]" source-api=""></div>
-                        <div form-radio text="是否可选优惠券" ng-model="param.act_coupon" required="true" default="2"
+                        <div form-radio text="是否可选优惠券" ng-model="param.act_coupon" required="true" default="1"
                              source="[{text:'可选',value:1},{text:'不可选',value:2}]" source-api=""></div>
+                        <div form-radio text="是否支持陌生人拼团" type="radio" ng-model="param.group_strange" required="true"
+                             default="2" source="[{text:'是',value:'2'},{text:'否',value:'1'}]"
+                             ng-show="param.category!=3" source-api=""></div>
+
+                        <!--<div form-input text="目标金额" ng-model="param.act_goal_price" required="true" min="0"-->
+                        <!--max="options_goal_price" type="number"></div>-->
+                        <div form-input text="拼团人数" ng-model="param.group_min_num" min="0" required_span_show="true"
+                             type="number" ng-show="param.category!=3"></div>
+                        <div form-input text="拼团有效时间(小时)" ng-model="hours" min="0" type="number"
+                             placeholder="单位:小时" ng-show="param.category!=3" required_span_show="true"></div>
+                        <div form-input text="玩法说明标题" ng-model="param.play_subject" placeholder="玩法说明标题"
+                             ng-show="param.category!=3"></div>
+                        <div form-textarea text="玩法说明内容" ng-model="param.play_introduction"
+                             placeholder="玩法说明内容" ng-show="param.category!=3"></div>
                     </div>
                 </div>
 
                 <div class="panel panel-primary">
                     <div class="panel-body">
-                        <h4>活动详情</h4>
+                        <h5 ng-click="title_info[3] = title_info[3]+1; ">活动详情
+                            <i class="animate-switch fa"
+                               ng-class="{'fa-angle-double-up':title_info[3]%2==1,'fa-angle-double-down':title_info[3]%2==0}"></i>
+                        </h5>
+                    </div>
+                    <div class="panel-body" ng-show="title_info[3]%2==1">
                         <div form-input text="音频媒体标题" ng-model="param.media_title" placeholder="音频媒体标题,不超过30个字"
                              minlength="0" maxlength="30"></div>
                         <div form-input text="视频音频媒体地址" ng-model="param.video_url"
@@ -222,13 +238,20 @@
                 <!--</div>-->
                 <div class="panel panel-primary">
                     <div class="panel-body">
-                        <h4>管理</h4>
-                        <div form-textarea text="管理备注" ng-model="param.admin_remark" required="true"></div>
+                        <h5 ng-click="title_info[4] = title_info[4]+1; ">显示管理
+                            <i class="animate-switch fa"
+                               ng-class="{'fa-angle-double-up':title_info[4]%2==1,'fa-angle-double-down':title_info[4]%2==0}"></i>
+                        </h5>
+                    </div>
+                    <div class="panel-body" ng-show="title_info[4]%2==1">
                         <div form-radio text="是否显示在列表" ng-model="param.visible" required="true" default="1"
                              source="[{text:'是',value:'1'},{text:'否',value:'2'}]" source-api=""></div>
-                        <div form-input text="排序" ng-model="param.order_by" type="number" min="0"></div>
+                        <div form-radio text="是否在日历中显示" ng-model="param.show_in_calendar" default="1"
+                             source="[{text:'显示',value:'1'},{text:'不显示',value:'2'}]" required="true"></div>
                         <div form-radio text="是否绑定手机号" ng-model="param.enable_bind_mobile" default="1"
                              source="[{text:'需要',value:'1'},{text:'不需要',value:'2'}]" required="true"></div>
+                        <div form-input text="排序" ng-model="param.order_by" type="number" min="0"></div>
+                        <div form-textarea text="管理备注" ng-model="param.admin_remark"></div>
                     </div>
                 </div>
 
