--- a/app/styles/bootstrap/index.css
+++ b/app/styles/bootstrap/index.css
@@ -1302,7 +1302,7 @@ body {
     font-size: 14px;
     line-height: 1.42857143;
     color: #333;
-    background-color: #fff
+    background-color: #fff;
 }
 
 input, button, select, textarea {
@@ -10090,32 +10090,6 @@ html, body {
     cursor: pointer
 }
 
-.mod_msg, .mod_http_msg {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 9999;
-    text-align: center;
-    color: #fff;
-
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0);
-
-    display: -webkit-box;
-    -webkit-box-align: center;
-    -webkit-box-pack: center;
-}
-
-.mod_msg span, .mod_http_msg span {
-    display: inline-block;
-    padding: 10px 20px;
-    line-height: 20px;
-    color: #fff;
-    background: rgba(0, 0, 0, 0.7);
-    -webkit-border-radius: 5px;
-}
-
 /*表单*/
 /*directive show_images*/
 .show_image_radius {
@@ -10152,7 +10126,7 @@ html, body {
 
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0);
+    background: rgba(0, 0, 0, 0.1);
 
     display: -webkit-box;
     -webkit-box-align: center;
