增加活动的多个详细地址
1：增加活动的多个详细地址
2：新增课程负责人
3：其他小修小改

--- a/app/scripts/views/biz/banner/update.html
+++ b/app/scripts/views/biz/banner/update.html
@@ -20,7 +20,7 @@
                              source="[{text:'不跳转任何页面',value:'1'},{text:'跳转至网页',value:'2'}]" source-api=""></div>
                         <div form-input text="URL" ng-model="param.url" placeholder="url"
                              ng-show="toggle=='2'"></div>
-                        <div form-input text="排序数字" ng-model="param.sort_num" type="number"
+                        <div form-input text="排序数字" ng-model="param.sort_num"
                              placeholder="排序数字" required="true"></div>
                     </div>
                 </div>
