--- a/app/scripts/views/directive/hjm/hjm-grid.html
+++ b/app/scripts/views/directive/hjm/hjm-grid.html
@@ -1,19 +1,20 @@
-<div>
-    <div class="panel panel-primary">
+<div class="height100">
+    <div class="panel panel-primary height100">
         <div class="panel-heading routerTitleSection">
             <!--<h3 class="panel-title" ng-bind="configDef.title||''">-->
-                <!--<span class="content" ng-bind="configDef.title||''"></span>-->
-                <!--<div class="row">-->
-                    <!--<div class="col-sm-6" style="line-height: 34px;">-->
-                        <!--<span class="content" ng-bind="configDef.title||''"></span>-->
-                    <!--</div>-->
-                    <!--<div class="routerSection col-sm-6"></div>-->
-                <!--</div>-->
+            <!--<span class="content" ng-bind="configDef.title||''"></span>-->
+            <!--<div class="row">-->
+            <!--<div class="col-sm-6" style="line-height: 34px;">-->
+            <!--<span class="content" ng-bind="configDef.title||''"></span>-->
+            <!--</div>-->
+            <!--<div class="routerSection col-sm-6"></div>-->
+            <!--</div>-->
             <!--</h3>-->
         </div>
-        <div class="panel-body">
+        <div class="panel-body height100 overflowAuto">
             <div class="searchSection"></div>
             <div class="gridSection"></div>
+            <div class="paginationSection"></div>
             <!--<table class="table table-bordered">-->
             <!--<thead>-->
             <!--<th class="{{header.className}}" bindonce ng-repeat="header in biz.columns" bo-text="header.name"></th>-->
@@ -60,7 +61,7 @@
             <!--<td>Southampton, UK</td>-->
             <!--</tr>-->
             <!--</tbody>-->
-            </table>
+            <!--</table>-->
         </div>
     </div>
 </div>
