--- a/app/scripts/views/biz/sms/add.html
+++ b/app/scripts/views/biz/sms/add.html
@@ -8,8 +8,8 @@
                 <div class="panel panel-primary">
                     <div class="panel-body">
                         <h4>短信信息</h4>
-                        <div form-radio text="是否为营销短信" ng-model="param.is_marketing" required="true"
-                             source="[{text:'是',value:'1'},{text:'否',value:'0'}]" default="1"></div>
+                        <div form-radio text="短信运营商" ng-model="param.is_marketing" required="true"
+                             source="[{text:'大汉三通短信',value:'1'},{text:'建周短信',value:'0'}]" default="1"></div>
                         <div form-textarea text="短信内容" ng-model="param.content"
                              placeholder="短信内容" required="true"></div>
                         <div form-textarea text="发送用户" ng-model="mobiles"
