--- a/app/scripts/views/biz/exchangecode/update.html
+++ b/app/scripts/views/biz/exchangecode/update.html
@@ -23,15 +23,19 @@
                              source="[{text:'单次',value:'1'},{text:'包月',value:'2'},{text:'不限',value:'0'}]"
                              source-api=""></div>
 
-                        <div form-input text="优惠劵金额" ng-model="param.price" required="true" type="number"></div>
+                        <!--<div form-input text="满(金额)" ng-model="param.over_price" type="number" min="0" max="param.price"-->
+                             <!--placeholder="不是满减优惠券的不填写"></div>-->
+
+                        <div form-input text="减(金额)" ng-model="param.price" required="true" type="number" min="0"></div>
 
                         <div form-input text="优惠券总量" ng-model="param.total" required="true" type="number"></div>
 
-                        <div form-input text="优惠券有效天数" ng-model="param.valid_days" required="true" type="number"></div>
+                        <div form-input text="优惠券有效天数" ng-model="param.valid_days" required="true" type="number"
+                             placeholder="自兑换成功后的有效时间"></div>
 
-                        <div form-date-time text="上线时间" ng-model="param.start_time" required="true"></div>
+                        <div form-date-time text="兑换开始时间" ng-model="param.start_time" required="true"></div>
 
-                        <div form-date-time text="过期时间" ng-model="param.expire_time" required="true"></div>
+                        <div form-date-time text="兑换结束时间" ng-model="param.expire_time" required="true"></div>
                     </div>
                 </div>
                 <a class="btn btn-success btn-rounded" ng-disabled="FormBody.$invalid" ng-click="submit()">提交</a>
