--- a/app/scripts/views/biz/wechat/menu.html
+++ b/app/scripts/views/biz/wechat/menu.html
@@ -8,9 +8,20 @@
                 <div class="panel panel-primary">
                     <div class="panel-body">
                         <h4>微信菜单</h4>
-                        <textarea class="form-control" rows="50" ng-model="menu"></textarea>
+                        <!--<nav class="navbar navbar-default">-->
+                            <!--<div class="container-fluid">-->
+                                <!--<div class="collapse navbar-collapse">-->
+                                    <!--<ul class="nav navbar-nav">-->
+                                        <!--<li class="active"><a href="">菜单1</a></li>-->
+                                        <!--<li class=""><a href="">菜单2</a></li>-->
+                                        <!--<li class=""><a href="">菜单3</a></li>-->
+                                    <!--</ul>-->
+                                <!--</div>-->
+                            <!--</div>-->
+                        <!--</nav>-->
                     </div>
                 </div>
+                <textarea class="form-control" rows="50" ng-model="menu"></textarea>
                 <a class="btn btn-success btn-rounded" show-role="'admin'" ng-disabled="FormBody.$invalid"
                    ng-click="submit()">提交</a>
             </form>
