--- a/app/styles/bootstrap/index.css
+++ b/app/styles/bootstrap/index.css
@@ -5533,7 +5533,7 @@ a.list-group-item-danger.active, a.list-group-item-danger.active:hover, a.list-g
 }
 
 .panel-title, .panel-title > a, .panel-title > small, .panel-title > .small, .panel-title > small > a, .panel-title > .small > a {
-    color: inherit
+    /*color: inherit*/
 }
 
 .panel-footer {
