--- a/app/scripts/views/biz/wechat/menu.html
+++ b/app/scripts/views/biz/wechat/menu.html
@@ -12,10 +12,10 @@
     </style>
     <div class="panel panel-primary">
         <div class="panel-heading">
-            <h3 class="panel-title" show-role="'admin'">修改微信菜单</h3>
+            <h3 class="panel-title">修改微信菜单</h3>
         </div>
         <div class="panel-body">
-            <form class="form-horizontal" name="FormBody" novalidate disabled-role="'admin'">
+            <form class="form-horizontal" name="FormBody" novalidate>
                 <div class="panel panel-primary">
                     <div class="panel-body">
                         <div class="col-sm-4">
@@ -87,7 +87,7 @@
                     </div>
                 </div>
                 <!--<textarea class="form-control" rows="50" ng-model="menu"></textarea>-->
-                <a class="btn btn-success btn-rounded" show-role="'admin'" ng-disabled="FormBody.$invalid"
+                <a class="btn btn-success btn-rounded" ng-disabled="FormBody.$invalid"
                    ng-click="submit()">提交</a>
             </form>
         </div>
