--- a/app/scripts/views/biz/sms/add.html
+++ b/app/scripts/views/biz/sms/add.html
@@ -10,8 +10,11 @@
                         <h4>短信信息</h4>
                         <div form-radio text="短信运营商" ng-model="param.is_marketing" required="true"
                              source="[{text:'大汉三通短信',value:'1'},{text:'建周短信',value:'0'}]" default="1"></div>
+                        <div class="row">
+                            <h3 class="col-sm-offset-2 text-danger">短信内容,不要加签名,例:【芝麻学社】(千万不能加,加了发不出去)</h3>
+                        </div>
                         <div form-textarea text="短信内容" ng-model="param.content"
-                             placeholder="短信内容" required="true"></div>
+                             placeholder="短信内容,不要加签名" required="true"></div>
                         <div form-textarea text="发送用户" ng-model="mobiles"
                              placeholder="发送用户手机号,用逗号隔开" required="true"></div>
                     </div>
