增加已售份数的显示数量为200条数据

--- a/app/scripts/views/biz/act/update.html
+++ b/app/scripts/views/biz/act/update.html
@@ -3,6 +3,16 @@
         .inlineBlock {
             display: inline-block;
         }
+
+        /*div.form-group {*/
+            /*transition: all linear 0.5s;*/
+            /*height: 100px;*/
+            /*height: auto;*/
+        /*}*/
+
+        /*div.form-group.ng-hide {*/
+            /*height: 0;*/
+        /*}*/
     </style>
     <div class="panel panel-primary">
         <div class="panel-heading">
