课程负责人 修改

--- a/app/scripts/views/biz/act/update.html
+++ b/app/scripts/views/biz/act/update.html
@@ -38,7 +38,7 @@
                                ng-class="{'fa-angle-double-up':title_info[0]%2==1,'fa-angle-double-down':title_info[0]%2==0}"></i>
                         </h5>
                     </div>
-                    <div class="panel-body" ng-show="title_info[0]%2==1">11111111111111111</div>
+                    <!--<div class="panel-body" ng-show="title_info[0]%2==1">11111111111111111</div>-->
                     <div class="panel-body" ng-show="title_info[0]%2==1">
 
                         <div form-select text="课程负责人" ng-model="param.account_id"
