update  uib-pagination 插件

--- a/app/scripts/views/directive/hjm/hjm-pagination-bar.html
+++ b/app/scripts/views/directive/hjm/hjm-pagination-bar.html
@@ -1,8 +1,9 @@
 <div class="pull-right">
-<!--<div>-->
-    <pagination total-items="pageInfo.totalItems" ng-model="pageInfo.currentPage" items-per-page="pageInfo.itemsPerPage"
-                max-size="pageInfo.maxSize" ng-change="getapi(pageInfo.currentPage)" class="pagination"
-                boundary-links="true"
-                rotate="false" num-pages="numPages" previous-text="&lsaquo;" next-text="&rsaquo;"
-                first-text="&laquo;" last-text="&raquo;"></pagination>
+    <!--<div>-->
+    <div uib-pagination total-items="pageInfo.totalItems" ng-model="pageInfo.currentPage"
+         items-per-page="pageInfo.itemsPerPage"
+         max-size="pageInfo.maxSize" ng-change="getapi(pageInfo.currentPage)" class="pagination"
+         boundary-links="true"
+         rotate="false" num-pages="numPages" previous-text="&lsaquo;" next-text="&rsaquo;"
+         first-text="&laquo;" last-text="&raquo;"></div>
 </div>
