top-nav 展示切换城市

--- a/app/scripts/views/directive/nav-top/nav-account.html
+++ b/app/scripts/views/directive/nav-top/nav-account.html
@@ -6,7 +6,7 @@
         <a ng-bind="env_name"></a>
     </li>
     <li class="admin-dropdown" ng-if="hjm.city_name">
-        <a ng-bind="hjm.city_name"></a>
+        <a ng-bind="hjm.city_name" ng-click="change_city()"></a>
     </li>
     <!--<li class="dropdown" dropdown="" on-toggle="toggled(open)">-->
     <!--<a class="dropdown-toggle notoggle"-->
@@ -21,16 +21,14 @@
     <!--</ul>-->
     <!--</li>-->
     <li class="dropdown admin-dropdown" dropdown="" on-toggle="toggled(open)">
-        <a class="dropdown-toggle"
-           dropdown-toggle=""
-           aria-haspopup="true"
-           aria-expanded="false">
+        <a class="dropdown-toggle" dropdown-toggle="" aria-haspopup="true" aria-expanded="false"
+           ui-sref="main.account.profile">
             <img src="styles/images/flat-avatar.png" class="topnav-img">
             <span class="hidden-sm" ng-bind="hjm.username"></span></a>
-        <ul class="dropdown-menu pull-right animated fadeIn">
-            <li><a ui-sref="main.account.profile">修改个人信息</a></li>
-            <li><a class="ng-binding" ng-click="change_city()">切换定位城市</a></li>
-            <li><a class="ng-binding" ng-click="logout()">退出</a></li>
-        </ul>
+        <!--<ul class="dropdown-menu pull-right animated fadeIn">-->
+        <!--<li><a ui-sref="main.account.profile">修改个人信息</a></li>-->
+        <!--<li><a class="ng-binding" ng-click="change_city()">切换定位城市</a></li>-->
+        <!--<li><a class="ng-binding" ng-click="logout()">退出</a></li>-->
+        <!--</ul>-->
     </li>
 </ul>
